--- a/Petini_Capston_Mini/src/app/shop-owner/manage-service/manage-service.component.html
+++ b/Petini_Capston_Mini/src/app/shop-owner/manage-service/manage-service.component.html
@@ -3,7 +3,7 @@
     <div class="col-6">
       <h1>Quản lý dịch vụ</h1>
     </div>
-    <div class="col-6 text-end "> <button mat-raised-button routerLink="AddItems">Tạo Sản Phẩm</button></div>
+    <div class="col-6 text-end "> <button mat-raised-button routerLink="AddService">Tạo Sản Phẩm</button></div>
 
   </div>
 
