done update profile

--- a/Petini_Capston_Mini/src/app/shop-owner/manage-account/account-detail/account-detail.component.html
+++ b/Petini_Capston_Mini/src/app/shop-owner/manage-account/account-detail/account-detail.component.html
@@ -4,9 +4,9 @@
       <div class="card">
         <img class="card-img-top" src="/assets/images/img-4.png">
         <div class="card-body text-center">
-          <h5 class=" card-title m-0">Quang</h5>
+          <h5 class=" card-title m-0">{{username}}</h5>
 
-          <div class="cart-text"><span> quang@gmail.com </span></div>
+          <div class="cart-text"><span> {{email}} </span></div>
           <div class="badge rounded-pill d-inline w-100 mt-4 fs-6 badge-success"><span class="">Hoat dong</span></div>
         </div>
       </div>
@@ -24,7 +24,7 @@
                 <div class="username">
                   <mat-form-field class="input-username w-100" appearance="outline">
                     <mat-label>Tên đăng nhập</mat-label>
-                    <input matInput type="text" name="txtUsername" [(ngModel)]="username">
+                    <input matInput type="text" name="txtUsername" [(ngModel)]="username" readonly>
                     <mat-icon matPrefix><i class="fa-solid fa-user"></i></mat-icon>
 
                   </mat-form-field>
@@ -35,7 +35,8 @@
                 <div class="username">
                   <mat-form-field class="input-username w-100" appearance="outline">
                     <mat-label>Số điện thoại</mat-label>
-                    <input matInput pattern="^[0]\d{9,12}$" type="tel" name="txtPhone" maxlength="10" minlength="10" [(ngModel)]="username">
+                    <input matInput readonly  type="tel" name="txtPhone"
+                     [(ngModel)]="username">
                     <mat-icon matPrefix><i class="fa-solid fa-phone"></i></mat-icon>
 
                   </mat-form-field>
@@ -49,10 +50,9 @@
                 <div class="username">
                   <mat-form-field class="input-username w-100" appearance="outline">
                     <mat-label>Email</mat-label>
-                    <input matInput type="email" ngModel email name="txtEmail" [(ngModel)]="email"
+                    <input matInput type="email" readonly ngModel email name="txtEmail" [(ngModel)]="email"
                       pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
                     <mat-icon matPrefix><i class="fa-regular fa-envelope"></i></mat-icon>
-
                   </mat-form-field>
                 </div>
 
@@ -62,18 +62,13 @@
                 <div class="username">
                   <mat-form-field class="input-username w-100" appearance="outline">
                     <mat-label>Ngày sinh </mat-label>
-                    <input matInput name="txtDob" id="date" [matDatepicker]="picker" [min]="minDate" [max]="maxDate" [(ngModel)]="dob">
-                    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-                    <mat-datepicker #picker></mat-datepicker>
+                    <input matInput name="txtDob" readonly id="date" [min]="minDate" [max]="maxDate" [(ngModel)]="dob">
                     <mat-icon matPrefix><i class="fa-solid fa-calendar-days"></i></mat-icon>
-
                   </mat-form-field>
                 </div>
-
               </div>
             </div>
           </div>
-
           <div class="login-input">
 
 
@@ -81,12 +76,8 @@
             <div class="username">
               <mat-form-field class="input-username w-100" appearance="outline">
                 <mat-label>Địa chỉ</mat-label>
-                <input matInput type="text" name="txtAddress" [(ngModel)]="address">
+                <input matInput type="text" name="txtAddress" [(ngModel)]="address" readonly>
                 <mat-icon matPrefix><i class="fa-solid fa-map-location-dot"></i></mat-icon>
-
-
-
-
               </mat-form-field>
             </div>
 
@@ -96,7 +87,7 @@
           <div class="username w-100">
             <div class="text-center p-0 login-button-div w-100">
               <button class="login-button btn btn-primary btn-block w-100 fa-lg gradient-custom-2 mb-3 fs-5"
-                mat-raised-button type="submit">
+                mat-raised-button routerLink="..">
                 Quay lại</button>
             </div>
           </div>
