--- a/Petini_Capston_Mini/src/app/test/test.component.html
+++ b/Petini_Capston_Mini/src/app/test/test.component.html
@@ -1,40 +1,11 @@
-<section class="w-100 vh-100 d-flex align-items-center">
-  <div class="container">
-    <div class="row w-100 justify-content-center">
-      <div class="col-8">
-        <div class="card bg-white rounded overflow-auto">
-          <div class="card-body">
-            <div class="container p-3 vh-50">
-              <div class="row w-100">
-                <!-- box time -->
-                <div class="col-3 col-xxl-2 col-xl-2 p-1">
-                  <div class="rounded-2 border-1 border border-dark ">
-                    <div
-                      class="box-time d-flex align-items-center justify-content-center border-bottom border-4 border-success flex-column py-2">
-                      <h2 class="m-0">8:00</h2>
-                    </div>
-                  </div>
-                </div>
-                <!-- box time -->
-                <!-- box time -->
-                <div class="col-3 col-xxl-2 col-xl-2 p-1">
-                  <div class="rounded-2 border-1 border border-dark disabled">
-                    <div
-                      class="box-time d-flex align-items-center justify-content-center border-bottom border-4 border-success flex-column py-2">
-                      <h2 class="m-0">8:00</h2>
-                    </div>
-                  </div>
-                </div>
-                <!-- box time -->
+<form (ngSubmit)="getName()">
 
 
-              </div>
-
-
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+<mat-form-field class="input-username w-100" appearance="outline">
+  <mat-label>    Tên sản phẩm</mat-label>
+  <input matInput type="text" [(ngModel)]="name" name="txtname"
+   >
+</mat-form-field>
+{{name}}
+<button mat-button type="submit"> submit </button>
+</form>
