--- a/Petini_Capston_Mini/src/app/pop-up/delete/delete.component.html
+++ b/Petini_Capston_Mini/src/app/pop-up/delete/delete.component.html
@@ -7,12 +7,12 @@
 </div>
 <div class="container">
   <div class="content">
-    <div class="text ">
-
+    <div class="text mb-3">
+      <p class="fs-5"></p>
     </div>
     <div class="button">
       <button class="cancel" mat-button mat-dialog-close>No, cancel It!</button>
-      <button class="delete" mat-button mat-dialog-close (click)="deleteHomestay()">Yes, delete It!</button>
+      <button class="delete" mat-button mat-dialog-close (click)="deleteAction()">Yes, delete It!</button>
     </div>
   </div>
 </div>
