--- a/Petini_Capston_Mini/src/app/shop-owner/manage-service/manage-service.component.html
+++ b/Petini_Capston_Mini/src/app/shop-owner/manage-service/manage-service.component.html
@@ -31,7 +31,7 @@
               totalItems: count
               };
               let i = index"
-              [style.cursor]="'pointer'" routerLink="ItemsDetail"
+              [style.cursor]="'pointer'" routerLink="ServiceDetail"
                 (click)="onItemSelector(post.id, post.name)">
               <td >
                 {{post.id}}
@@ -39,7 +39,7 @@
               <td >
 
                 <div class="d-flex align-items-center">
-
+                  <img [src]="post.imageUrl" alt="" style="width: 45px; height: 45px" class="rounded-circle" />
                   <div class="ms-3">
                     <p class="fw-bold mb-1"> {{post.name}}</p>
                     <p class="text-muted mb-0 overflow-hidden text-break"> {{post.description}}</p>
