service detail not done

--- a/Petini_Capston_Mini/src/app/service-detail/service-detail.component.html
+++ b/Petini_Capston_Mini/src/app/service-detail/service-detail.component.html
@@ -11,14 +11,11 @@
         <div class="content-left">
           <p class="m-0"></p>
           <span class="first-text">
-            SERVICE
+            {{name}}
           </span>
-
+          <span class="fs-4 price">{{price}} &#8363;</span>
           <span class="second-text mb-3">
-            Me-O® Cat Food là thức ăn cho mèo cân bằng tối ưu và đầy đủ dinh dưỡng với độ ngon miệng và khả năng tiêu
-            hóa cao. Bản chất thơm ngon, bổ dưỡng và giòn của Me-O® Cat Food khiến mèo yêu quý của bạn phải lòng nó ngay
-            từ miếng cắn đầu tiên. Chỉ cần chắc chắn rằng bạn luôn có một bát nước uống sạch gần đó cho thú cưng yêu quý
-            của bạn.
+            {{description}}
           </span>
 
 
