--- a/Petini_Capston_Mini/src/app/service/service.component.html
+++ b/Petini_Capston_Mini/src/app/service/service.component.html
@@ -13,13 +13,13 @@
           <div class="row">
             <!-- items -->
 
-              <a *ngFor="let item of values" routerLink="/Shop/Items" [title]="item.name" (click)="onItemSelector(item.name)"
+              <a *ngFor="let item of values" routerLink="/Service/ServiceDetail" [title]="item.name" (click)="onItemSelector(item.name)"
                 class="col-lg-3 col-md-4 col-sm-6 col-12 pb-3 " >
                 <div class="card p-2 ">
                   <img [src]="item.imgURL" [alt]="item.name" class="card-img-top item-img">
                   <h5 class="card-title text-center fw-bold text-body text-capitalize item-text">{{item.name}}
                   </h5>
-
+                  <h6 class="card-text text-center "> {{item.price | currency:'VND'}}</h6>
                 </div>
               </a>
 
