--- a/Petini_Capston_Mini/src/app/cart-order/history-order/history-order.component.html
+++ b/Petini_Capston_Mini/src/app/cart-order/history-order/history-order.component.html
@@ -5,10 +5,10 @@
       <div class="col-10 mb-5">
         <div class="cart rounded ">
           <div class="cart-header text-center">
-            <h2>Giỏ hàng của bạn</h2>
+            <h2>Lịch sử đặt hàng của bạn</h2>
           </div>
           <!-- cart -->
-          <div class="cart-body ">
+          <div class="cart-body mt-4">
             <div class="rounded-bottom bg-white px-4 pt-4 pb-2">
               <div class="d-flex flex-row justify-content-between ">
                 <div><button>Xem San Pham</button></div>
@@ -16,6 +16,18 @@
                     class="text-upper">DANG GIAO</span></div>
               </div>
               <hr class="w-100 my-2">
+              <div class="d-flex align-items-center ">
+                <img src="" alt="" style="width: 80px; height: 80px" class="rounded" />
+                <div class="ms-3">
+                  <p class="fw-bold mb-1">
+                    thuc an cho meo
+
+                  </p>
+                  <p class="text-muted mb-0 text-descrip fs-14">thuc an choo meo</p>
+                  <p class="fs-14">x1</p>
+                </div>
+              </div>
+              <hr>
               <div class="d-flex align-items-center ">
                 <img src="" alt="" style="width: 80px; height: 80px" class="rounded" />
                 <div class="ms-3">
